tests/good/amb_lambda_1.ppl
define f = amb (\x. amb (\y. amb (x,y) (x,y) (x,y) (x,y) (x,y))
                        (\y. amb (x,y) (x,y) (x,y) (x,y) (x,y))
                        (\y. amb (x,y) (x,y) (x,y) (x,y) (x,y)))
               (\x. amb (\y. amb (x,y) (x,y) (x,y) (x,y) (x,y))
                        (\y. amb (x,y) (x,y) (x,y) (x,y) (x,y))
                        (\y. amb (x,y) (x,y) (x,y) (x,y) (x,y)));
let g = f (amb () () () () () () ()) in ()

-- correct: [42.0]
